backend: load configuration endpoint